# energy_storage

./: .gitignore  01_optimal_dispatch.ipynb  02_data.ipynb  README.md  _quarto.yml  data.html  index.html  index.ipynb  optimal_dispatch.html  pyproject.toml  robots.txt  search.json  settings.ini  sidebar.yml  sitemap.xml
data/: production_1.csv
energy_storage/: _modidx.py  data.py  optimal_dispatch.py
nbs/: 01_optimal_dispatch.ipynb  02_data.ipynb  index.ipynb  nbdev.yml  sidebar.yml
nbs/data/: spot_price.csv
src/energy_storage/: _modidx.py  data.py  optimal_dispatch.py
