[tool.poetry]
name = "energy_storage"
version = "0.0.1"
description = "Energy storage tools"
authors = ["markkvdb <github@mvanderbroek.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
nbdev = "^2.2.5"
ipykernel = "^6.15.1"
black = "^22.6.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
