[tool.poetry]
name = "energy_storage"
version = "0.0.1"
description = "Energy storage tools"
authors = ["markkvdb <github@mvanderbroek.com>"]
packages = [
    { include = "energy_storage", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pandas = "^1.4.3"

[tool.poetry.group.dev.dependencies]
notebook = "^6.5.1"
nbdev = "^2.3.7"
ipykernel = "^6.15.1"
black = "^22.6.0"
isort = "^5.10.1"
matplotlib = "^3.5.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
