[tool.poetry]
name = "energy_storage"
version = "0.0.1"
description = "Energy storage tools"
authors = ["markkvdb <github@mvanderbroek.com>"]
packages = [
    { include = "energy_storage", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pandas = "^2.0.3"
matplotlib = "^3.7.2"

[tool.poetry.group.dev.dependencies]
notebook = "^6.5.4"
nbdev = "^2.3.12"
ipykernel = "^6.24.0"
black = "^23.7.0"
isort = "^5.12.0"
setuptools = "^68.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
